--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,33 @@
 {
-  "name": "commerce_redsys/sermepa",
-  "description": "SERMEPA library for PHP projects.",
-  "keywords":     ["sermepa", "payment"],
-  "homepage":     "https://github.com/CommerceRedsys/sermepa",
-  "type":         "library",
-  "license":      "MIT",
+  "name": "commerceredsys/sermepa",
+  "homepage": "https://github.com/CommerceRedsys/sermepa",
+  "type": "library",
+  "description": "Payment gateway library for spanish banks that use Sermepa/Redsýs systems.",
+  "keywords": [
+    "payment",
+    "gateway",
+    "e-commerce",
+    "sermepa",
+    "redsys"
+  ],
+  "license": "MIT",
+  "require": {
+    "php": ">=5.3.0"
+  },
   "autoload": {
     "psr-4": {
-        "CommerceRedsys\\Payment\\": "src/"
+      "CommerceRedsys\\Payment\\": "src"
     }
   },
-  "require": {
-    "php": ">=5.3"
-  },
+  "authors": [
+    {
+      "name": "Pedro Cambra",
+      "homepage": "https://www.drupal.org/u/pcambra"
+    },
+    {
+      "name": "Manuel Egío",
+      "homepage": "https://www.drupal.org/u/facine"
+    }
+  ],
   "minimum-stability": "dev"
 }
